add responsive vertical scrollbars

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,9 @@
  
 @layer base {
   :root {
+    --navbar-height: 60px;
+    --message-box-height: 100px;
+
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
