--- a/app/globals.css
+++ b/app/globals.css
@@ -104,12 +104,12 @@
 .loader:before {
   animation: box1 1s infinite;
   background-color: #fff;
-  box-shadow: 30px 0 0 rgb(162,28,175);
+  box-shadow: 30px 0 0 rgb(162, 28, 175);
   margin-bottom: 10px;
 }
 .loader:after {
   animation: box2 1s infinite;
-  background-color: rgb(162,28,175);
+  background-color: rgb(162, 28, 175);
   box-shadow: 30px 0 0 #fff;
 }
 
@@ -127,15 +127,15 @@
 
 @keyframes box1 {
   0% {
-    box-shadow: 30px 0 0 rgb(162,28,175);
+    box-shadow: 30px 0 0 rgb(162, 28, 175);
   }
   50% {
-    box-shadow: 0 0 0 rgb(162,28,175);
+    box-shadow: 0 0 0 rgb(162, 28, 175);
     margin-bottom: 0;
     transform: translate(15px, 15px);
   }
   100% {
-    box-shadow: 30px 0 0 rgb(162,28,175);
+    box-shadow: 30px 0 0 rgb(162, 28, 175);
     margin-bottom: 10px;
   }
 }
